assets/css/style.css
@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");

/* Asterisk wildcard selector to override default styles added by the browser */
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

/* General Styles */

body {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  min-height: 100vh;
  background: #f1f1f1;
  font-family: "Roboto", sans-serif;
}
a {
  text-decoration: none;
}
h2 {
  color: #000000;
  text-align: center;
}

/* Header */
header {
  background: #f1f1f1;
  position: fixed;
  z-index: 99;
  width: 100%;
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  align-items: center;
  top: 0;
  gap: 10px;
}

header a {
  text-decoration: none;
  color: inherit;
  padding-top: 5px;
}


#navigation {
  list-style: none;
  display: flex;
  justify-content: center;
  gap: 5px;
  margin-bottom: 5px;
}

.nav-l {
  margin-left: 8px;
  font-weight: 500;
  border-right: 2px solid #6d6875;
  padding-right: 6px;
}
.nav-s {
  margin-left: 8px;
  font-weight: 500;
}

#favicon-if {
  display: none;
}

.active {
  color: #6d6875;
}

/* Dropdown menu */
nav {
  /* background-color: lightblue; */
  width: 100%;
  box-shadow: 0 2px 2px #3a3a3a;
  display: none;
}

/* Nav toggle /// Same code used as in Love-Runner example project*/
#nav-toggle:checked ~ nav {
  display: block;
}
#nav-toggle {
  display: none;
}
.nav-toggle-label {
  font-size: 2rem;
}

/* INDEX PAGE */
#home {
  flex: 1 0 auto;
  margin-top: 65px;
  overflow-y: auto;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  gap: 5px;
}

#hero {
  background: url("../images/hero.webp") no-repeat center center/cover;
  height: 517px;
  width: 100%;
  position: relative;
}

#intro {
  position: absolute;
  height: auto;
  width: 80%;
  background-color: lightcoral;
  text-align: center;
  padding-inline: 10px;
  opacity: 0.7;
  bottom: 0;
  right: 0;
  padding-block: 15px;
  font-size: 105%;
}

#purpose{
  line-height: 170%;
  font-weight: 500;
  text-align: center;
  padding: 3%;
  border-bottom: solid #6d6875 2px;
}

/* Experiences and Profiles Section */
.exp-title {
  margin: 5%;
  letter-spacing: 1px;
  text-align: center;
}

#experiences {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  gap: 5px;
}

.container {
  position: relative;
  text-align: center;
  height: 100%;
  width: 100%;
}
.img-exp {
  opacity: 0.5;
  height: 100%;
  width: 100%;
}
.img-profiles {
  height: 100%;
  width: 100%;
}

.centered {
  position: absolute;
  width: 80%;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  font-size: 100%;
}
#profiles{
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  gap: 5px;
}

.profile{
  text-align: center;
  padding: 2%;
}



/* JOIN US PAGE */
#join-main{
  display: flex;
  flex: 1 0 auto;
  flex-direction: column;
  margin-top: 65px;
  background: url("../images/zu.webp");
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;

}
#signup {
  padding: 3%;
}

#signup-form {
  background-color: rgba(60, 60, 60, 0.6);
  padding: 3%;
  border-radius: 15px;
}
.form-element {
  display: flex;
  flex-direction: column;
  text-align: center;
  gap: 3px;
  padding: 3%;
}
.form-element > label,
.form-element > h4 {
  font-size: 130%;
}
#button {
  text-align: center;
}
#radio-buttons {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  font-size: 120%;
}
.join-button {
  border-radius: 10px;
  font-size: 100%;
  padding: 5%;
}


/* SIGNED PAGE STYLES */
#signed-main{
  display: flex;
  flex-direction: column;
  flex: 1 0 auto;
  margin-top: 65px;
  padding: 5%;
}
#signed {
  padding: 10%;
  word-spacing: 2px;
  font-size: 150%;
  text-align: left;
  background-color: rgba(60, 60, 60, 0.2);
  border-radius: 10px;
}


/* GALLERY PAGE STYLES */
section > h2 {
  margin-top: 65px;
  padding: 5%;
  background-color: #eeeeee;
}
#gallery > img {
  width: 100%;
}

/* FOOTER */
footer {
  background: #393e46;
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

#about {
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
  justify-content: center;
  margin: 5px 5px 5px 5px;
  gap: 2px;
  width: 100%;
  align-items: center;
}

#footer-icons {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  margin: 5px;
  gap: 10px;
  width: 100%;
  align-items: center;
}
#footer-icons > h4 {
  color: #f1f1f1;
  width: 100%;
  text-align: center;
}
#footer-icons > a {
  color: #f1f1f1;
}

#about > a {
  text-decoration: none;
  color: #f1f1f1;
}

/* MEDIA QUERIES!!! */

/* Just for the form */
@media screen and (min-width: 350px) {
  #signup {
    padding-top: 12%;
  }
}

/* Main text size increase and form text increase */
@media screen and (min-width: 400px) {
  .centered h3,
  p {
    font-size: 130%;
  }
  .form-element {
    font-size: 105%;
  }
  .form-element > input,
  h4 {
    font-size: 105%;
    height: 28px;
  }
  .form-element > textarea{
    font-size: 115%;
  }
  .radio-element {
    gap: 25px;
  }
}

/* Images in main look bad including hero image, text too small*/

@media screen and (min-width: 460px) {
  /* INDEX PAGE */
  /* hero img */
  #hero {
    background-position: center top;
  }
  #intro {
    width: 30%;
  }
  /* FOOTER */
  #about {
    flex-direction: row;
  }
  .footer-a {
    border-right: 2px solid #f1f1f1;
    padding-right: 3px;
  }
  .footer-w {
    padding-left: 3px;
  }

  /* JOINUS PAGE */
  #signup {
    padding-top: 8%;
  }
}

/* FOOTER*/
@media screen and (min-width: 579px) {
  .footer-w {
    padding-right: 3px;
  }
  .footer-s {
    border-left: 2px solid #f1f1f1;
    padding-left: 3px;
  }
}

/* General aspect looks bad */
@media screen and (min-width: 768px) {
  /* INDEX PAGE */
  /* Header */
  #logo {
    font-size: 200%;
  }
  .burger {
    font-size: 100%;
    padding-left: 15px;
  }
  #navigation {
    font-size: 120%;
  }

  /* Experiences section */
  #experiences {
    justify-content: space-evenly;
    gap: 0;
  }

  .container {
    width: 49.5%;
  }
  .centered h3,
  p {
    font-size: 110%;
  } 
  /* Profiles section */
  #profiles{
    justify-content: space-evenly;
    gap: 0;
  }
  .profile{
    width: 49.5%;
  }
  /* FOOTER */
  #about {
    font-size: 125%;
  }
  #footer-icons {
    font-size: 150%;
    gap: 20px;
  }

  /* JOIN US PAGE */
  
  .join-button {
    width: 80%;
    font-size: 135%;
  }
  /* GALLERY PAGE */
  section > h2 {
    font-size: 150%;
  }
  #gallery {
    column-count: 2;
    column-gap: 0;
  }
}
/* General aspect looks bad */
@media screen and (min-width: 1024px) {
  /* INDEX PAGE */
  /* nav */
  #logo {
    font-size: 250%;
  }
  .burger {
    font-size: 130%;
    padding-left: 15px;
  }
  #navigation {
    font-size: 125%;
  }
  /* Hero */
  #hero {
    background-position: center center;
  }
  #purpose{
    font-size: 120%;
  }

  .centered h3,
  p {
    font-size: 140%;
  }

  .exp-title{
    font-size: 135%;
  }
  /* JOIN US PAGE */
    #signup{
    position:relative;
   }

   #signup-form{
    max-width: 500px;
    left: 10%;
    padding: 2%;
   } 
   .form-element > input,
  h4 {
    font-size: 110%;
    height: 35px;
  }
  /* GALLERY PAGE */
  #gallery {
    column-count: 3;
  }
}

